SERVER-35286: Pass the oplog NamespaceString when getting the collection.

(cherry picked from commit 3b152ee018a4c88588371ef5f8eb978f7fb8a192)